fix: Update link colors for consistency and improved visibility

--- a/content/style.css
+++ b/content/style.css
@@ -74,7 +74,7 @@ input.fake:checked+.modal {
   margin: 0;
   flex: 1;
   text-decoration: none;
-  color: inherit;
+  color: #ff69b4 !important;
 }
 
 .title>.link {
@@ -121,7 +121,7 @@ textarea,
   padding: 4px 6px;
   font-size: inherit;
   margin: 0 0 16px 0;
-  color: inherit;
+  color: #ff69b4 !important;
   background-color: inherit;
 }
 
@@ -147,11 +147,11 @@ form .error {
 }
 
 .quote {
+  color: #ff69b4 !important;
   background-position: center;
   background-size: cover;
   font-size: 5vw;
   padding: 8% 4%;
-  color: #ff69b4 !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
